log/build_2022-11-22_19-04-47/robo_builder_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_builder_py/lib/python3.8/site-packages/robo_builder_py/robo_builder.py", line 391
    else:
    ^
SyntaxError: invalid syntax

